<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rrmtechnology.ronald.proyecto1.MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnombre"
        android:inputType="none"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/hintnombre"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ettelefono"
        android:inputType="number"
        android:hint="@string/hinttelefono"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/hintfecha"
        android:id="@+id/seleccionarfecha"
        android:onClick="mostrarcalendario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:inputType="textEmailAddress"
        android:hint="@string/hintemail"

       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etdescripcion"
        android:inputType="textMultiLine"
        android:hint="@string/hintdescrip"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textboton"
        android:id="@+id/buttonS"
         />


</LinearLayout>
